fix header and slider styles in mobile and lg screen

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                                                 type="button"
                                                 data-bs-toggle="collapse"
                                                 data-bs-target="#collapseOne-2"
-                                                aria-expanded="true"
+                                                aria-expanded="false"
                                                 aria-controls="collapseOne"
                                             >
                                                 <span
