--- a/index.html
+++ b/index.html
@@ -431,19 +431,16 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="accordion" id="accordion-2">
+
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
                                             <button
-                                                class="accordion-button"
+                                                class="accordion-button collapsed"
                                                 type="button"
                                                 data-bs-toggle="collapse"
-                                                data-bs-target="#collapseOne-2"
+                                                data-bs-target="#collapseFour-1"
                                                 aria-expanded="false"
-                                                aria-controls="collapseOne"
+                                                aria-controls="collapseFour"
                                             >
                                                 <span
                                                     >هل التطبيق متاح باكثر من
@@ -455,9 +452,9 @@
                                             </button>
                                         </h2>
                                         <div
-                                            id="collapseOne-2"
-                                            class="accordion-collapse collapse show"
-                                            data-bs-parent="#accordion-2"
+                                            id="collapseFour-1"
+                                            class="accordion-collapse collapse"
+                                            data-bs-parent="#accordion-1"
                                         >
                                             <div class="accordion-body">
                                                 <p>
@@ -477,9 +474,9 @@
                                                 class="accordion-button collapsed"
                                                 type="button"
                                                 data-bs-toggle="collapse"
-                                                data-bs-target="#collapseTwo-2"
+                                                data-bs-target="#collapseFive-1"
                                                 aria-expanded="false"
-                                                aria-controls="collapseTwo"
+                                                aria-controls="collapseFive"
                                             >
                                                 <span
                                                     >هل التطبيق مجاني
@@ -491,9 +488,9 @@
                                             </button>
                                         </h2>
                                         <div
-                                            id="collapseTwo-2"
+                                            id="collapseFive-1"
                                             class="accordion-collapse collapse"
-                                            data-bs-parent="#accordion-2"
+                                            data-bs-parent="#accordion-1"
                                         >
                                             <div class="accordion-body">
                                                 <p>
@@ -513,7 +510,7 @@
                                                 class="accordion-button collapsed"
                                                 type="button"
                                                 data-bs-toggle="collapse"
-                                                data-bs-target="#collapseThree-2"
+                                                data-bs-target="#collapseSix-1"
                                                 aria-expanded="false"
                                                 aria-controls="collapseThree"
                                             >
@@ -527,9 +524,9 @@
                                             </button>
                                         </h2>
                                         <div
-                                            id="collapseThree-2"
+                                            id="collapseSix-1"
                                             class="accordion-collapse collapse"
-                                            data-bs-parent="#accordion-2"
+                                            data-bs-parent="#accordion-1"
                                         >
                                             <div class="accordion-body">
                                                 <p>
